# test_task_dfa_media

./: README.md
test_task/: main.py  pyproject.toml
test_task/assets/: Приложение_к_заданию_бек_разработчика.xlsx - Лист1.csv
test_task/test_task/: schema.py  settings.py
test_task/test_task/company_stats/: __init__.py  comp_stats.py
test_task/test_task/db/: base.py  models.py  utils.py
test_task/test_task/services/: cli.py  converters.py  readers.py
