[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Timofey Neyenburg <neyenburgz@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.93.0"
sqlalchemy = "^2.0.5.post1"
xlrd = "^2.0.1"
openpyxl = "^3.1.1"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
